--- a/index.html
+++ b/index.html
@@ -191,8 +191,9 @@
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h5 class="card-title">Personal 1:1 Education/Coaching Session</h5>
+                                <p class="card-text">Meet with your CryptoConsultant in person for real time support.</p>
+                                <p>(60 minute session)</p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                     </div>
@@ -201,8 +202,9 @@
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h5 class="card-title">Virtual Consulting Session</h5>
+                                <p class="card-text">Telephone or Skype sessions with your dedicated CryptoConsultant.</p>
+                                <p>(60 minutes session)</p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                     </div>
@@ -211,8 +213,9 @@
                     <div class="card" style="width: 18rem;">
                         <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h5 class="card-title">In-home CryptoConsultz Support</h5>
+                                <p class="card-text">In-home real time assistance for those seeking hand's on support.</p>
+                                <p>90 minute session)</p>
                                 <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                     </div>
@@ -224,8 +227,9 @@
                         <div class="card" style="width: 18rem; margin-top:20px;">
                             <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <h5 class="card-title">On-demand telephone assistance</h5>
+                                    <p class="card-text">Access your CryptoConsultant on-demand.  Without an appointment.</p>
+                                    <p>(Up to 30 minutes)</p>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
                         </div>
@@ -234,13 +238,15 @@
                         <div class="card" style="width: 18rem; margin-top:20px;">
                             <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <h5 class="card-title">CryptoConsultz Seminar</h5>
+                                    <p class="card-text">Admission to our CryptoConsultz seminar.</p>
+                                    <p>6 hours of cryptocurrency & blockchain education.</p>
                                     <a href="#" class="btn btn-primary">Go somewhere</a>
                                 </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 col-md-4">
+                    <!-- future card -->
+                    <!-- <div class="col-sm-4 col-md-4">
                       <div class="card" style="width: 18rem; margin-top:20px;">
                           <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                               <div class="card-body">
@@ -249,7 +255,7 @@
                                   <a href="#" class="btn btn-primary">Go somewhere</a>
                             </div>
                       </div>
-                 </div>
+                 </div> -->
             </div>
             </div>
             </div>
@@ -263,10 +269,9 @@
                 <div class="col"></div>
                 <div class="col" ><h2>Contact Us</h2></div>
                 <div class="col"></div>
-              </div>  
+            </div>  
 
             <!-- Form -->
-            <form>
              
              <form>
                 <!--part I-->
@@ -309,6 +314,7 @@
                   <label for="exampleFormControlFile1">Example file input</label>
                   <input type="file" class="form-control-file" id="exampleFormControlFile1">
                 </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
 
               </form>
             <!-- end section contact -->
