--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </div>
       </div>
 
-            <!-- Start Navbar -->
+            <!-- ====== Start Navbar ======= -->
             <nav class="navbar fixed-top navbar navbar-expand-lg navbar-light">
 
                 <a class="navbar-brand" href="#">
@@ -106,7 +106,7 @@
             </nav>
             <!-- End Navbar -->
 
-            <!-- Jumbotron-fluid start here -->
+            <!-- ====== Jumbotron-fluid start here ======= -->
                 <div class="jumbotron jumbotron-fluid">
                     <div class="container">
                         <h1 class="display-4">CryptoConsultz</h1>
@@ -154,7 +154,7 @@
                   </div>
                 </div>
               </section>
-              <!-- ======./ About ======  -->
+              <!-- End About -->
 
             <!-- ====== Start Services ======  -->
               <section class="about section-padding" id='service'>
@@ -188,9 +188,9 @@
                   </div>
                 </div>
               </section>
-              <!-- ======./ Services ======  -->
+              <!-- End Services -->
 
-            <!-- Packages & Pricing -->
+            <!-- ====== Packages & Pricing ======= -->
             <div id="packages & pricing">
             <div class="card">
             <div class="card-header">
@@ -271,9 +271,9 @@
             </div>
             </div>
             </div>
-            <!-- End packages & pricing -->
+            <!-- End Packages & pricing -->
 
-            <!-- contact start here -->
+            <!-- ====== Contact ====== -->
             <div class="container-fluid" id="contact">
               <div class="row">
                 <!-- Header -->
@@ -331,9 +331,9 @@
                 <button type="submit" class="btn btn-primary">Submit</button>
 
               </form>
-            <!-- end section contact -->
+            <!-- End contact -->
 
-            <!-- footer start here -->
+            <!-- ====== footer start here ====== -->
             <footer>
               <div class="footer" id="footer">
                   <div class="container">
@@ -411,7 +411,8 @@
 
           </footer>
               <!-- end footer -->
-    <!-- Script -->
+
+    <!-- ====== Script ====== -->
     <script>
     function showmodal()
           {
