--- a/index.html
+++ b/index.html
@@ -120,15 +120,11 @@
                 <div class="container">
                   <div class="row justify-content-center">
 
-                    <div class="col-lg-4 col-md-6 photo sm-mb-50">
-                      <img src="http://via.placeholder.com/350x600" alt="">
-                    </div>
-
                     <div class="col-lg-6 col-md-6 hero">
                       <div class="info mb-20">
                         <!-- Title -->
                         <div class="title mb-50">
-                          <h4 class="title"><span>About </span>Us</h4>
+                          <h4 class="title">About Us</h4>
                         </div>
 
                         <h6 class="mb-20"></h6>
@@ -150,6 +146,8 @@
                             </p>
                         </div>
                       </div>
+                      <div class="col-lg-5 col-md-6 photo sm-mb-50">
+                      <img src="http://via.placeholder.com/500x500" alt="">
                     </div>
                   </div>
                 </div>
@@ -199,7 +197,7 @@
             </div>
             <div class="row" class="row-1">
                 <div class="col-sm-4 col-md-4">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 22rem;">
                         <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Personal 1:1 Education/Coaching Session</h5>
@@ -210,7 +208,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 col-md-4">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 22rem;">
                         <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Virtual Consulting Session</h5>
@@ -221,7 +219,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4 col-md-4">
-                    <div class="card" style="width: 18rem;">
+                    <div class="card" style="width: 22rem;">
                         <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">In-home CryptoConsultz Support</h5>
@@ -235,7 +233,7 @@
 
                 <div class="row" class="row-2"><!--row-2-->
                     <div class="col-sm-4 col-md-4">
-                        <div class="card" style="width: 18rem; margin-top:20px;">
+                        <div class="card" style="width: 22rem; margin-top:10%;">
                             <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">On-demand telephone assistance</h5>
@@ -246,7 +244,7 @@
                         </div>
                     </div>
                 <div class="col-sm-4 col-md-4">
-                        <div class="card" style="width: 18rem; margin-top:20px;">
+                        <div class="card" style="width: 22rem; margin-top:10%;">
                             <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title">CryptoConsultz Seminar</h5>
