--- a/index.html
+++ b/index.html
@@ -30,7 +30,26 @@
       <!-- <link rel="stylesheet" href="animate.min.css"> -->
 </head>
       <body>
-
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                ...
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+              </div>
+            </div>
+          </div>
+        </div>
       <!-- Start  Loading Section -->
       <div class="loading-overlay">
           <div class="spinner">
@@ -69,40 +88,10 @@
                         <!-- Left side -->
                         <a class="nav-link" href="#" >
                           <i class="icon ion-ios-cart" id="icon"></i></a>
-                        <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap" aria-haspopup="true" aria-expanded="false">
+                            <a type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
                             <i class="icon ion-person" id="icon"></i>
                             </a>
-                          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                            <div class="modal-dialog" role="document">
-                              <div class="modal-content">
-                                <div class="modal-header">
-                                  <h5 class="modal-title" id="exampleModalLabel">New message</h5>
-                                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                  </button>
-                                </div>
-                                <div class="modal-body">
-                                  <form>
-                                    <div class="form-group">
-                                      <label for="recipient-name" class="col-form-label">Recipient:</label>
-                                      <input type="text" class="form-control" id="recipient-name">
-                                    </div>
-                                    <div class="form-group">
-                                      <label for="message-text" class="col-form-label">Message:</label>
-                                      <textarea class="form-control" id="message-text"></textarea>
-                                    </div>
-                                  </form>
-                                </div>
-                                <div class="modal-footer">
-                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                  <button type="button" class="btn btn-primary">Send message</button>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                </div>
+              </div>
             </nav>
             <!-- End Navbar -->
 
