madal is closing propperly

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <!-- ====== Jumbotron-fluid start here ======= -->
                 <div class="jumbotron jumbotron-fluid">
                     <div class="container">
-                        <h1 class="display-4">CryptoConsultz</h1>
-                        <p class="lead">Digital Currency Investing Consulting</p>
+                        <h1 class="display-4" class="animated slideInLeft" >CryptoConsultz</h1>
+                        <p  class="lead" class="animated slideInLeft" >Digital Currency Investing Consulting</p>
                     </div>
                 </div>
             <!-- End jumbotron-fluid -->
@@ -267,10 +267,10 @@
                 <div class="col"></div>
                 <div class="col" ><h2>Contact Us</h2></div>
                 <div class="col"></div>
-            </div>  
+            </div>
 
             <!-- Form -->
-             
+
               </div>
 
             <!-- Form -->
