Inclined div is added

--- a/index.html
+++ b/index.html
@@ -143,8 +143,10 @@
               </section>
               <!-- End About -->
 
+              <div class="army-chevron" ></div>
+
             <!-- ====== Start Services ======  -->
-              <section class="about section-padding" id='service'>
+              <section class="services section-padding" id='service'>
                 <div class="container">
                   <div class="row justify-content-center">
 
