--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <nav class="navbar fixed-top navbar navbar-expand-lg navbar-light">
 
                 <a class="navbar-brand" href="#">
-                <img src="./css/Images/logo.png" width="46" height=50 class="animated infinite rotateIn"class="d-inline-block align-top" >
+                <img src="./css/Images/logo.png" width="46" height=50 class="animated rotateIn"class="d-inline-block align-top" >
                  <span class="navbar-brand mb-0 h1">Cryptoconsultz</span>
                  </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -78,7 +78,7 @@
                             <a class="nav-link" href="#service">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#packages & pricing">packages & pricing</a>
+                            <a class="nav-link" href="#packages">packages & pricing</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
@@ -150,8 +150,8 @@
                 <div class="container">
                   <div class="row justify-content-center">
 
-                    <div class="col-lg-4 col-md-6 photo sm-mb-50">
-                      <img src="http://via.placeholder.com/350x600" alt="">
+                    <div class="col-lg-6 col-md-5 photo sm-mb-50">
+                      <img src="http://via.placeholder.com/500x500" alt="">
                     </div>
 
                     <div class="col-lg-6 col-md-6 hero">
@@ -180,7 +180,7 @@
               <!-- End Services -->
 
             <!-- ====== Packages & Pricing ======= -->
-            <div id="packages & pricing">
+            <div id="packages">
             <div class="card">
             <div class="card-header">
             <div>
@@ -300,7 +300,7 @@
                   </div>
 
                   <!-- Comment -->
-                  <div class="form-group">
+                  <div class="form-groups">
                     <label for="exampleFormControlTextarea1">Comment</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                   </div>
@@ -321,7 +321,7 @@
                   <div class="container">
                     <div class="row">
                       <!-- <div class="row"> -->
-                    <div class="col"><h3> CryptoConsultz, LLC </h3></div>
+                    <div class="col"><h4> CryptoConsultz, LLC </h4></div>
                       <div class="col">
                         <ul class="social">
                             <li> <a href="#"> <i class="icon ion-social-facebook" id="icon-footer"></i> </i> </a> </li>
