--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 </div>
                 <div class="col-sm-4 col-md-4">
                     <div class="card" style="width: 22rem;">
-                        <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
+                        <img class="card-img-top" src="images/two.jpg" alt="Card image cap">
                             <div class="card-body">
                                 <h5 class="card-title">Virtual Consulting Session</h5>
                                 <p class="card-text">Telephone or Skype sessions with your dedicated CryptoConsultant.</p>
