jumbotron animation is added

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             <!-- ====== Jumbotron-fluid start here ======= -->
                 <div class="jumbotron jumbotron-fluid">
                     <div class="container">
-                        <h1 class="display-4" class="animated slideInLeft" >CryptoConsultz</h1>
-                        <p  class="lead" class="animated slideInLeft" >Digital Currency Investing Consulting</p>
+                        <h1 class="display-4 animated fadeInUpBig" class="" >CryptoConsultz</h1>
+                        <p  class="lead animated fadeInUpBig" class="" >Digital Currency Investing Consulting</p>
                     </div>
                 </div>
             <!-- End jumbotron-fluid -->
