--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                 <div class="row" class="row-2"><!--row-2-->
                     <div class="col-sm-4 col-md-4">
                         <div class="card" style="width: 22rem; margin-top:10%;">
-                            <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
+                            <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap" style="box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
                                 <div class="card-body">
                                     <h5 class="card-title">On-demand telephone assistance</h5>
                                     <p class="card-text">Access your CryptoConsultant on-demand.  Without an appointment.</p>
@@ -236,7 +236,7 @@
                     </div>
                 <div class="col-sm-4 col-md-4">
                         <div class="card" style="width: 22rem; margin-top:10%;">
-                            <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap">
+                            <img class="card-img-top" src="http://via.placeholder.com/350x150" alt="Card image cap" style="shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);>
                                 <div class="card-body">
                                     <h5 class="card-title">CryptoConsultz Seminar</h5>
                                     <p class="card-text">Admission to our CryptoConsultz seminar.</p>
