--- a/index.html
+++ b/index.html
@@ -96,11 +96,14 @@
             <!-- End Navbar -->
 
             <!-- ====== Jumbotron-fluid start here ======= -->
-                <div class="jumbotron jumbotron-fluid">
-                    <div class="container">
-                        <h1 class="display-4 animated fadeInUpBig" class="" >CryptoConsultz</h1>
-                        <p  class="lead animated fadeInUpBig" class="" >Digital Currency Investing Consulting</p>
-                    </div>
+              <div id="particles-js"></div>
+                <div class="row">
+                  <div class="jumbotron jumbotron-fluid">
+                      <div class="container">
+                          <h1 class="display-4 animated fadeInUpBig" class="" >CryptoConsultz</h1>
+                          <p  class="lead animated fadeInUpBig" class="" >Digital Currency Investing Consulting</p>
+                      </div>
+                  </div>
                 </div>
             <!-- End jumbotron-fluid -->
 
@@ -353,24 +356,23 @@
                     <div class="row">
                         <div class="col-sm-1"></div>
                         <div class="col-sm-10">
-                          <br>
-                          <p>Information provided through informational consulting sessions is for informational purposes only and should not be considered legal or financial advice.</p>
-                          <p>You should consult with an attorney or other professional to determine what may be best for your individual needs.</p>
-                          <p>CryptoConsultz, LLC does not make any guarantee or other promise as to any results that may be obtained from using this service.</p>
-                          <p>No one should make any investment decision without first consulting his or her own financial advisor and conducting his or her own research and due diligence.</p>
-                          <p>To the maximum extent permitted by law, CryptoConsultz, LLC disclaims any and all liability in the event any information, commentary, analysis, opinions, advice and/or recommendations prove to be inaccurate, incomplete or unreliable, or result in any investment or other losses.</p>
+                              <br>
+                              <p>Information provided through informational consulting sessions is for informational purposes only and should not be considered legal or financial advice.</p>
+                              <p>You should consult with an attorney or other professional to determine what may be best for your individual needs.</p>
+                              <p>CryptoConsultz, LLC does not make any guarantee or other promise as to any results that may be obtained from using this service.</p>
+                              <p>No one should make any investment decision without first consulting his or her own financial advisor and conducting his or her own research and due diligence.</p>
+                              <p>To the maximum extent permitted by law, CryptoConsultz, LLC disclaims any and all liability in the event any information, commentary, analysis, opinions, advice and/or recommendations prove to be inaccurate, incomplete or unreliable, or result in any investment or other losses.</p>
 
-                          <p>Your use of the information provided or materials is at your own risk.</p>
-                        </div>
-                        </div>
-
-                      </div>
+                              <p>Your use of the information provided or materials is at your own risk.</p>
+                           </div>
+                         </div>
                         </div>
                       </div>
                     </div>
-                    </div>
-                      <!--/.row-->
                   </div>
+                </div>
+                      <!--/.row-->
+              </div>
                   <!--/.container-->
               </div>
               <!--/.footer-->
@@ -401,8 +403,9 @@
           $("#download").modal("show");
           }
    </script>
-    <script
-    src="https://code.jquery.com/jquery-3.3.1.js"
+   <!-- particles js -->
+    <script src="js/particles.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
     integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
     crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
