--- a/index.html
+++ b/index.html
@@ -146,8 +146,6 @@
               </section>
               <!-- End About -->
 
-              <div class="army-chevron" ></div>
-
             <!-- ====== Start Services ======  -->
               <section class="services section-padding" id='service'>
                 <div class="container">
@@ -161,7 +159,7 @@
                       <div class="info mb-20">
                         <!-- Title -->
                         <div class="title mb-50">
-                          <h4 class="title"><span>Services </span></h4>
+                          <h4 class="title">Services</h4>
                         </div>
 
                         <h6 class="mb-20"></h6>
